# linkbudget

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  cspell.config.yaml  flake.nix  justfile
.github/workflows/: build-and-test.yml  ci.yml
docs/: release.md
examples/: montecarlo_cn0_target.rs  plot_cn0_margin.py
examples/montecarlo-cn0-target/: Cargo.toml  plot_cn0_margin.py  pyproject.toml
examples/montecarlo-cn0-target/src/: main.rs
files/: example.toml  example.toml.html
scripts/: cut-release.sh
src/: ber.rs  budget.rs  cli.rs  coding.rs  constants.rs  conversions.rs  doppler.rs  energy.rs  evm.rs  file_operations.rs  fspl.rs  lib.rs  main.rs  modulation.rs  noise.rs  open.rs  path_loss.rs  pfd.rs  phy.rs  plot.rs  quantization.rs  receiver.rs  sensitivity.rs  slant_range.rs  transmitter.rs
src/conversions/: frequency.rs  mod.rs  noise.rs  power.rs
src/orbits/: circular.rs  mod.rs  slant_range.rs
src/utils/: print.rs
tests/: readme_examples.rs  scenarios.rs
