[package]
authors = ["Ian Cleary <iancleary@hey.com>"]
description = "A link budget toolbox for satellite communications"
documentation = "https://docs.rs/linkbudget"
edition = "2021"
homepage = "https://github.com/iancleary/linkbudget"
license = "MIT"
name = "linkbudget"
repository = "https://github.com/iancleary/linkbudget"
version = "0.5.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfconversions = "0.6.0"
