[package]
authors = ["Ian Cleary <iancleary@hey.com>"]
description = "A link budget toolbox for satellite communications"
documentation = "https://docs.rs/linkbudget"
edition = "2021"
homepage = "https://github.com/iancleary/linkbudget"
license = "MIT"
name = "linkbudget"
repository = "https://github.com/iancleary/linkbudget"
version = "0.5.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfconversions = "0.7.0"
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"], optional = true }

[features]
default = ["cli"]
cli = ["dep:tracing-subscriber"]
